--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ tagline: >
   Local onde coloco os meus projetos de anime
 
 description: >
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Local onde coloco os meus projetos de anime e outras coisas pertinentes
 
 url: "https://DigoqueDigo.github.io"
 
