--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ analytics:
   google:
     id: # fill in your Google Analytics ID
   goatcounter:
-    id: # fill in your GoatCounter ID
+    id: verissesub
   umami:
     id: # fill in your Umami ID
     domain: # fill in your Umami domain
@@ -50,7 +50,7 @@ analytics:
 
 # Pageviews settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: goatcounter
 
 # Prefer color scheme setting.
 #
